--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -1,4 +1,32 @@
-@media (min-width: 1200px) {
+@media (min-width: 1900px){
+    .right{
+        position: absolute;
+        z-index: -1;
+        right:-147px;
+        top: -264px;
+        width: 1172px;
+        height: 1172px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .left{
+        z-index: -1;
+        position: absolute;
+        top: -153px;
+        width: 765px;
+        height: 765px;
+        left: -44px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    
+}
+
+@media (min-width: 1200px),(max-width: 1400px) {
     .container {
         max-width: 1140px;
     }
@@ -7,10 +35,14 @@
         .right{
             position: absolute;
             z-index: -1;
-            left: 1107px;
+            right: 0;
             top: -100px;
             width: 300px;
             height: 300px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
         }
         .left{
             z-index: -1;
@@ -19,6 +51,10 @@
             width: 400px;
             height: 400px;
             left: -44px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
         }
        
     }
@@ -37,13 +73,18 @@
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 320px), (max-width: 575px)  {
     .container {
         max-width: 300px;
     }
 
     .header {
         border-bottom-right-radius: 18px;
+        position: fixed;
+        background-color: $white;
+        z-index: 100;
+        top: 0;
+        left: 0;
         &__logo {
             gap: 14px;
         }
